# coding_agent

./: README.md  coder.py  context.py  edit_formats.py  edit_prompts.py  editor.py  main.py  models.py  pyproject.toml  test.py
coding_agent/: __init__.py  __main__.py
coding_agent/application/: __init__.py
coding_agent/application/dto/: __init__.py  requests.py  responses.py
coding_agent/application/ports/: __init__.py  editor_port.py  file_storage_port.py  llm_port.py  parser_port.py
coding_agent/application/services/: __init__.py  coding_service.py  context_service.py
coding_agent/cli/: __init__.py  main.py
coding_agent/config/: __init__.py  container.py  settings.py
coding_agent/domain/: __init__.py  models.py
coding_agent/infrastructure/: __init__.py
coding_agent/infrastructure/edit_formats/: __init__.py  search_replace.py  unified_diff.py
coding_agent/infrastructure/llm/: __init__.py  openai_provider.py
coding_agent/infrastructure/parsers/: __init__.py  multi_parser.py
coding_agent/infrastructure/storage/: __init__.py  file_storage.py
coding_agent/utils/: __init__.py  errors.py
legacy/: context.py  edit_prompts.py  main.py
