[project]
name = "coding-agent"
version = "0.2.0"
description = "AI-powered code editing assistant with clean architecture"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "grep-ast",
    "openai>=1.100.1",
    "python-dotenv>=1.1.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
coding-agent = "coding_agent.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["coding_agent"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
